<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fafafa">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/devtoolbar"
            app:titleTextColor="@color/colorPrimary"
            app:theme="@style/ToolbarThemeWhite"
            android:background="@color/colorAccent">

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:src="@drawable/iconnewnewnew"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version"
                android:id="@+id/version"
                android:layout_gravity="bottom"
                android:textSize="16sp"
                android:padding="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:textSize="16sp"
            android:text="@string/tujuan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Open source library"
                android:textSize="18sp"
                android:alpha=".8"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLDark"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/volley"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/volley"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/gson"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/gson"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/glide"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/glide"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/askpermission"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/askpermission"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/circleindicator"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/circleindicator"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/circleimageview"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/circleimageview"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:id="@+id/gmaps"
                        android:textSize="16sp"
                        android:textColor="@color/colorLDark"
                        android:alpha=".6"
                        android:text="@string/gmaps"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>