<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_height="432dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/location"
        android:textSize="14sp"
        android:textColor="@color/colorDark"
        android:alpha=".5"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"/>

    <FrameLayout
        android:id="@+id/maps_container"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:background="@color/colorSecondary">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".28"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gmapslink"
            android:text="@string/mapsGoogle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:alpha=".5"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/detail_direction"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            android:stateListAnimator="@animator/lift_on_touch"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="3dp"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_directions_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/get_direction"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>